<resources>
    <string name="app_name">CTUT-Student</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="letLogin">Let\'s login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="elearning">Elearning</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello</string>
    <string name="attendance">Attendance</string>
    <string name="remember_me">Remember me</string>
    <string name="userManage">User Manage</string>
    <string name="classManage">Class manage</string>
    <string name="courseManage">Course Manage</string>
    <string name="notiManage">Notification Manage</string>
    <string name="user_management">User Management</string>
    <string name="hiAdmin">Hi Admin</string>
    <string name="search">Search…</string>
    <string name="all_user">All user</string>
    <string name="save">Save</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="select_gender">Select Gender:</string>
    <string name="day_of_birth">Day of Birth</string>
    <string name="specialty">Specialty</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="classroom_management">Classroom Management</string>
    <string name="all_class">All Classrom</string>
    <string name="classId">Id Class</string>
    <string name="className">Class Name</string>
    <string name="description">Description</string>
    <string name="department">Department</string>
    <string name="adviser">Adviser</string>
    <string name="adviserEmail">Adviser Email</string>
    <string name="addNewClassroom">Add New Classroom</string>
    <string name="addNewUser">Add New User</string>
    <string name="academicYear">Academic Year</string>
    <string name="all_student">All Student</string>
    <string name="theory_periods">Theory periods</string>
    <string name="practice_periods">"Practice period "</string>
    <string name="course_id">Course id</string>
    <string name="course_name">Course name</string>
    <string name="lecturer_name">Lecturer name</string>
    <string name="course_description">Course description</string>
    <string name="lecturer_email">Lecturer email</string>
    <string name="addNewCourse">Add New Course</string>
    <string name="course_management">Course management</string>
    <string name="all_course">All course</string>
    <string name="practiceDocument">Practice document</string>
    <string name="lesson">Lesson</string>
    <string name="body">Content</string>
    <string name="title">Title</string>
    <string name="add">Add new</string>
    <string name="edit_info">Edit info</string>
    <string name="My_courses">My courses</string>
    <string name="ctut">CTUT</string>
    <string name="contact">Contact</string>
    <string name="change_password">Change password</string>
    <string name="id">Student ID</string>
    <string name="searchby">Search by name or id</string>
    <string name="full_name">Full name:</string>
    <string name="email1">Email:</string>
    <string name="class_id">Class Id:</string>
    <string name="student_id">Student ID:</string>
    <string name="birthday">Birthday:</string>
    <string name="address1">Address:</string>
    <string name="phone">Phone:</string>
</resources>