<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvLetsLogin"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/letLogin"
            android:textColor="@color/g_blue"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineLeftLogin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDontHaveAccount"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_register"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/guidelineLeftLogin"
            app:layout_constraintTop_toBottomOf="@id/tvLetsLogin" />

        <EditText
            android:id="@+id/edEmailLogin"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelineRightLogin"
            app:layout_constraintStart_toStartOf="@id/guidelineLeftLogin"
            app:layout_constraintTop_toBottomOf="@id/tvDontHaveAccount" />

        <EditText
            android:id="@+id/edPasswordLogin"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/guidelineRightLogin"
            app:layout_constraintStart_toStartOf="@id/guidelineLeftLogin"
            app:layout_constraintTop_toBottomOf="@id/edEmailLogin" />

        <TextView
            android:id="@+id/tvForgotPasswordLogin"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guidelineLeftLogin"
            app:layout_constraintTop_toBottomOf="@id/buttonLoginLogin" />

        <CheckBox
            android:id="@+id/cbRememberMeLogin"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/g_blue"
            android:text="@string/remember_me"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guidelineLeftLogin"
            app:layout_constraintTop_toBottomOf="@id/edPasswordLogin" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonLoginLogin"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/guidelineRightLogin"
            app:layout_constraintStart_toStartOf="@id/guidelineLeftLogin"
            app:layout_constraintTop_toBottomOf="@id/cbRememberMeLogin"
            app:spinning_bar_color="@color/white" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeftLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRightLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>