<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="25dp"
    android:fillViewport="true"
    android:background="@drawable/top_radius_white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressbarAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imageUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_schedule"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageStudent"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="6dp"

                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_profile" />



        </androidx.constraintlayout.widget.ConstraintLayout>


        <EditText
            android:id="@+id/edLastName"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/last_name"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edFirstName"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/imageUser" />

        <EditText
            android:id="@+id/edFirstName"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/first_name"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@+id/edLastName"
            app:layout_constraintTop_toBottomOf="@+id/imageUser" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/email"
            android:textStyle="bold"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edFirstName" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/password"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edEmail" />
        <EditText
            android:id="@+id/edAddress"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/address"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edPassword" />
        <EditText
            android:id="@+id/edPhone"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:singleLine="true"
            android:textColor="@color/g_gray700"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edDoB" />
        <EditText
            android:id="@+id/edSpecialty"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/specialty"
            android:singleLine="true"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edAddress" />

        <EditText
            android:id="@+id/edDoB"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/day_of_birth"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edSpecialty" />

        <TextView
            android:id="@+id/tvGender"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_gender"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/edPhone" />


        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@+id/tvGender"
            app:layout_constraintTop_toBottomOf="@+id/edPhone">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnSaveEditStudent"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/blue_background"
            android:fontFamily="@font/poppins_light"
            android:text="@string/addNewUser"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>