<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_radius_white"
    android:fillViewport="true"
    android:paddingBottom="25dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressbarAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imageUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toTopOf="parent">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUser"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="6dp"

                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_profile"  />



            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageEdit"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/user_item_bg"
                android:backgroundTint="#5E85F9"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@id/imageUser"
                app:layout_constraintEnd_toEndOf="@id/imageUser" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <EditText
            android:id="@+id/edLastName"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/last_name"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/edFirstName"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/imageUser" />

        <EditText
            android:id="@+id/edFirstName"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/first_name"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@+id/edLastName"
            app:layout_constraintTop_toBottomOf="@+id/imageUser" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/email"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edClassId" />

        <EditText
            android:id="@+id/edId"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/id"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edFirstName" />

        <EditText
            android:id="@+id/edClassId"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/classId"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edId" />
        <EditText
            android:id="@+id/edAddress"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/address"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edClassId" />
        <EditText
            android:id="@+id/edPhone"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:singleLine="true"
            android:textColor="@color/g_gray700"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edDoB" />
        <EditText
            android:id="@+id/edSpecialty"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/specialty"
            android:singleLine="true"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edAddress" />

        <EditText
            android:id="@+id/edAcaYear"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/academicYear"

            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edSpecialty" />

        <EditText
            android:id="@+id/edDoB"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_background"
            android:textColor="@android:color/black"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/day_of_birth"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edAcaYear" />

        <TextView
            android:id="@+id/tvGender"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_gender"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/edPhone" />


        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@+id/tvGender"
            app:layout_constraintTop_toBottomOf="@+id/edPhone">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnEditStudent"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/blue_background"
            android:fontFamily="@font/poppins_light"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>